--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: vertx-howtos-jekyll-theme
-url: https://vertx-howtos.github.io/HOWTO-ID
+url: https://vertx-howtos.github.io/protobuf-eventbus-howto
 
-asciidoctor:
+asciidoctor:q
   attributes:
     source-highlighter: rouge
     rouge-css: style
