--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: vertx-howtos-jekyll-theme
 url: https://vertx-howtos.github.io/protobuf-eventbus-howto
 
-asciidoctor:q
+asciidoctor:
   attributes:
     source-highlighter: rouge
     rouge-css: style
